--- a/.github/workflows/status.yaml
+++ b/.github/workflows/status.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
           hostname: Github-actions
+          version: 1.36.2
 
       - name: Start Deployment
         uses: aosus/docker-compose-gitops-action@v1
