use github secrets

--- a/.github/workflows/status.yaml
+++ b/.github/workflows/status.yaml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Start Deployment
         uses: aosus/docker-compose-gitops-action@v1
+        env:
+          WATCHTOWER_NOTIFICATION_URL: ${{ secrets.watchtower_notification_url }}
         with:
           remote_docker_host: ${{ secrets.server_address }}
           tailscale_ssh: true # no need for manual private and public keys
