add secret for email address

--- a/.github/workflows/status.yaml
+++ b/.github/workflows/status.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: aosus/docker-compose-gitops-action@v1
         env:
           WATCHTOWER_NOTIFICATION_URL: ${{ secrets.watchtower_notification_url }}
+          EMAIL: ${{ secrets.caddy_email }}
         with:
           remote_docker_host: ${{ secrets.server_address }}
           tailscale_ssh: true # no need for manual private and public keys
