Add aosus settings

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,27 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "automergeSchedule": [
+    "after 9pm",
+    "before 10pm"
+  ],
+  "docker": {
+    "automerge": true,
+    "pinDigests": true,
+    "labels": ["Container updates"]
+  },
+  "github-actions": {
+    "labels": ["Action updates"]
+  },
+  "packageRules": [
+    {
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "matchPackageNames": ["postgres", "clickhouse/clickhouse-server"],
+      "automerge": true
+    }
   ]
 }
