--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   caddy:
-    image: caddy:alpine
+    image: caddy:2.6.4-alpine
     restart: always
     ports:
       - "80:80"
@@ -13,35 +13,26 @@ services:
       - "443:443/udp"
     environment:
       - EMAIL
+    configs:
+      - source: Caddyfile
+        target: /etc/caddy/Caddyfile
     volumes:
-      - /home/ubuntu/caddy/Caddyfile:/etc/caddy/Caddyfile:ro
       - data:/data
       - config:/config
     networks:
       web:
 
   uptime-kuma:
-    image: louislam/uptime-kuma:1
+    image: louislam/uptime-kuma:1.21.1
     restart: always
     volumes:
       - /home/ubuntu/uptime-kuma:/app/data
     networks:
       web:
 
-  watchtower:
-    image: ghcr.io/containrrr/watchtower:latest
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - WATCHTOWER_NOTIFICATIONS_LEVEL=error
-      - WATCHTOWER_NOTIFICATIONS=shoutrrr
-      - WATCHTOWER_NOTIFICATION_URL
-      - WATCHTOWER_NOTIFICATIONS_HOSTNAME=aosus-oc-status
-      - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_SCHEDULE=* * 21 ? * *
-      - WATCHTOWER_ROLLING_RESTART=true
-      - WATCHTOWER_TIMEOUT=40s
+configs:
+  Caddyfile:
+   file: /home/ubuntu/caddy/Caddyfile
 
 volumes:
   data:
