enable swarm mode

--- a/.github/workflows/status.yaml
+++ b/.github/workflows/status.yaml
@@ -31,8 +31,9 @@ jobs:
           WATCHTOWER_NOTIFICATION_URL: ${{ secrets.watchtower_notification_url }}
           EMAIL: ${{ secrets.caddy_email }}
         with:
+          docker_swarm: true
           remote_docker_host: ${{ secrets.server_address }}
           tailscale_ssh: true # no need for manual private and public keys
           upload_directory: true # upload docker directory
           docker_compose_directory: caddy # directory to upload
-          args: -p status up -d
+          args: -p status --prune
