add scribe to increase cpu and network usage

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,19 @@
 {
-    email {env.EMAIL}
+	email {env.EMAIL}
 }
 status.aosus.org {
-    reverse_proxy uptime-kuma:3001
+	reverse_proxy uptime-kuma:3001
+}
+
+scribe.aosus.link {
+	reverse_proxy scribe:8080
+	respond /robots.txt 200 {
+		body "User-agent: *
+Disallow: /"
+	}
+	header {
+		X-Robots-Tag "noindex, noarchive, nofollow, nosnippet"
+		X-XSS-Protection "1; mode=block"
+	}
+	encode zstd gzip
 }
